Save new location logic implemented using BLoC pattern

--- a/lang/es.json
+++ b/lang/es.json
@@ -1,5 +1,6 @@
 {
   "map_text": "Mapa",
   "places_text": "Lugares",
-  "app_title": "Mis lugares favoritos"
+  "app_title": "Mis lugares favoritos",
+  "loc_name": "Escribe el nombre del lugar"
 }
