--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,6 @@
 {
   "map_text": "Map",
   "places_text": "Places",
-  "app_title": "My favourite places"
+  "app_title": "My favourite places",
+  "loc_name": "Set location name"
 }
