Add StreamBuilder to GoogleMaps. Get Places available at BLoC. No name added handling.

--- a/lang/en.json
+++ b/lang/en.json
@@ -2,5 +2,6 @@
   "map_text": "Map",
   "places_text": "Places",
   "app_title": "My favourite places",
-  "loc_name": "Set location name"
+  "loc_name": "Set location name",
+  "no_name": "Unnamed"
 }
