--- a/lang/es.json
+++ b/lang/es.json
@@ -2,5 +2,6 @@
   "map_text": "Mapa",
   "places_text": "Lugares",
   "app_title": "Mis lugares favoritos",
-  "loc_name": "Escribe el nombre del lugar"
+  "loc_name": "Escribe el nombre del lugar",
+  "no_name": "Sin nombre"
 }
